@@ -6,6 +6,7 @@
 4. Allow OPML URLs in podcast add URL dialog.
 5. Allow to read local RSS/OPML files in podcast search dialog.
 6. Add action to export current podcast subscriptions to OPML file.
+7. Add searching for radio stations on Comminity Radio Browser.
 
 2.3.3
 -----
